# CRusQ

./: .gitignore  README.md  package.json
.github/workflows/: build.yml  release.yml
mnt/user-data/outputs/qr-clipboard-app/: index.html  vite.config.js
mnt/user-data/outputs/qr-clipboard-app/src/: main.js  style.css
mnt/user-data/outputs/qr-clipboard-app/src-tauri/: Cargo.toml  tauri.conf.json
mnt/user-data/outputs/qr-clipboard-app/src-tauri/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
